create details view and etsy model. TODO:finish Detail view

--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
 	<link rel="stylesheet" type="text/css" href="./styles/style.css">
 </head>
 <body>
+	<div class="container">
+		<input class="search" type="text" placeholder="Search for items">
+		<div class='items-container'></div>
+	</div>
 
 <script src="https://code.jquery.com/jquery-3.1.1.min.js" integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8="   crossorigin="anonymous"></script>
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.8.3/underscore-min.js"></script>
