Add DetailView, loading gif, some css styling. TODO: navigate shop listings in DetailView

--- a/index.html
+++ b/index.html
@@ -6,8 +6,11 @@
 </head>
 <body>
 	<div class="container">
-		<input class="search" type="text" placeholder="Search for items">
-		<div class='items-container'></div>
+		<div class="header">
+			<a href="#home">Etsy</a>
+			<input class="search" type="text" placeholder="What are you shopping for?">
+		</div>
+		<div class="listings-container"></div>
 	</div>
 
 <script src="https://code.jquery.com/jquery-3.1.1.min.js" integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8="   crossorigin="anonymous"></script>
